--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="css/style.css">
-    <title>Landing Page with Countdown Timer Template</title>
+    <link rel="stylesheet" href="style.css">
+    <title>Terminal Titans: A Savvy Group of Security Researchers</title>
 </head>
 <body>
 
