updated the logo

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <section class="landing">
         <div class="landing-inner">
-          <img src="https://image.ibb.co/f4vhyS/logo.png" />
+          <img src="../images/logo.jpg" width="500" height="210"/>
           <p>A Group of Like Minded Security Researchers</p>
           <h1>Coming Soon</h1>
           <div class="countdown"></div>
